# MyMasterProject

./: .gitignore  main.py  pyproject.toml  run_all_scene1_noisy0.py
baseline/: all_image_block_matching.py  simple_block_matching.py  windowed_block_matching.py
baseline/bm3d/: 01_simple_block_matching.py
baseline/vbm3d/: vbm3d_min.py
src/: test.py
src/baseline/NLM/: NLM_acc.py  NL_means.py
src/baseline/NLM_AKNN/: AKNN_baseline.py  AKNN_init.py  AKNN_numba_window.py  AKNN_prop.py  AKNN_window.py  AKNN_window_numba.py  patch_matching_init.py  patch_matching_numba.py  patch_matching_prop.py
src/baseline/bm3d/: 01_simple_block_matching.py  02_windowed_block_matching.py  03_window_block_match_numba.py  denoise_pip_bm3d.py  kaiser_window.m  origin_bm3d.py
src/baseline/gaussian_filter/: demo_gaussian_kernel.m  gaussian_filtering.py  gaussian_kernel_2d.m
src/code/: AKNN_BM3D_RAW_v1.py  AKNN_BM3D_v2.py  AKNN_BM3D_v4.py  AKNN_BM3D_v5.py  AKNN_BM3D_v6.py  AKNN_BM3D_v6_numba.py  AKNN_BM3D_v7.py  AKNN_BM3D_v8.py  AKNN_BM3D_v8_raw.py  AKNN_baseline.py  aknn_tile_benchmark.py  baseline_bilateral_vst.py  baseline_nlm_vst.py  bm3d_baseline.py  bm3d_baseline_RAW.py  brute_bm3d_raw.py  brute_windowed_match.py  find_AKNN_bm3d_para.py  find_area.py  my_bm3d_baseline.py  my_brute_bm3d.py  my_brute_bm3d_8c.py  my_brute_bm3d_no_VST.py  my_brute_vbm3d.py  nlm_baseline.py  test_AKNN_BM3D_v6_SIDD.py
src/utils/: AI_Metrics.py  addAWGN.py  clip_720p.py  crvd_noise_estimate.py  crvd_raw2png.py  getMetrics.py  get_y_channel.py
utils/: addAWGN.py  image_y_channel.py
(+3 files in other folders)
